# rpggame

./: Cargo.toml  README.md
assets/: female.ase  gridselector.ase  male.ase
maps/: main.json
src/: cursor.rs  game.rs  gridselector.rs  layers.rs  main.rs  map.rs  player.rs  resolution.rs
tests/: player_tests.rs
