[package]
name = "rpggame"
version = "0.1.0"
edition = "2021"
authors = ["Grizzy<grizzyrp@gmail.com>"]
[dependencies]
#bevy = { version = "0.15.0", features = ["dynamic_linking", "bevy_dev_tools"] }
bevy = { version = "0.15.0", features = ["bevy_dev_tools"] }
rand = "0.8.5"
serde = "1.0.216"
serde_json = "1.0.134"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
